# STP2X3D

STP2X3D/: CMakeLists.txt  STEP_Reader.cpp  STP2X3D.cpp  StrTool.h  X3D_Writer.cpp
